Fix text overflow issues and add some styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -174,6 +174,8 @@ ion-icon {
   color: black;
   padding: 8px;
   border-radius: 6px;
+  border: 1px solid rgb(63, 93, 245);
+  z-index: 2;
   display: none;
   flex-direction: column;
   gap: 8px;
@@ -295,6 +297,7 @@ ion-icon {
 
 .todo-name {
   flex-grow: 1;
+  width: 100px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
